# MilkyTracker

./: .gitattributes  .gitignore  .gitmodules  CMakeAmigaToolchain.txt  CMakeLists.txt  JenkinsEnv.json  JenkinsEnv.json.bkp  Jenkinsfile  Makefile.mos  TODO.md
cmake/: FindSDL.cmake
resources/packaging/amigaos/: milkytracker_dir.info
src/: amigaversion.h  version.h
src/compression/: AIFFWriter.m
src/milkyplay/: AudioDriverBase.cpp  AudioDriverBase.h  AudioDriverManager.cpp  CMakeLists.txt  ChannelMixer.cpp  ChannelMixer.h  ExporterXM.cpp  LoaderMED.cpp  LoaderXM.cpp  Loaders.h  MasterMixer.cpp  MasterMixer.h  MilkyPlayCommon.h  PlayerGeneric.cpp  ResamplerFast.h  ResamplerMacros.h  XModule.cpp  XModule.h
src/milkyplay/drivers/amiga/: AudioDriver_AHI.cpp  AudioDriver_AHI.h  AudioDriver_Amiga.cpp  AudioDriver_Amiga.h
src/milkyplay/drivers/sdl/: AudioDriver_SDL.cpp
src/milkyplayer/: CMakeLists.txt  PlayerController.cpp  PlayerController.h  PlayerMaster.cpp  PlayerMaster.h  amigaversion.h.in  main.cpp  project.h
src/milkyplayer/borrowed-code/: AslRequester.cpp  AslRequester.h  BasicTypes.h  PlayerController.cpp  PlayerController.h  PlayerMaster.cpp
src/ppui/: BasicTypes.h  CMakeLists.txt  Menu.h
src/ppui/amiga/: DisplayDevice_Amiga.cpp
src/ppui/osinterface/amiga/: PPMutex.cpp  PPMutex.h  PPPath_Amiga.h
src/ppui/osinterface/posix/: PPPath_POSIX.cpp  PPSystem_POSIX.cpp
src/ppui/sdl/: DisplayDeviceFB_SDL.cpp  DisplayDeviceFB_SDL.h  DisplayDevice_SDL.cpp
src/tracker/: AnimatedFXControl.cpp  ModuleEditor.cpp  ModuleEditor.h  PianoControl.cpp  SampleEditor.cpp  SampleEditorControl.cpp  SampleEditorControl.h  SampleEditorControlToolHandler.cpp  SectionSamples.cpp  SectionSettings.cpp  Tracker.h  TrackerKeyboard.cpp
src/tracker/amiga/: AmigaApplication.h
src/tracker/sdl/: SDL_Main.cpp
